@@ -8,10 +8,14 @@
 
 <h1 style="text-align:center">Raptor RDF Parser Toolkit - News</h1>
 
-<h2>2005-??-?? Version 1.4.7 Released</h2>
+<h2>2005-06-08 Version 1.4.7 Released</h2>
 
-<p>Not yet released.
+<p>Fix crashes in the RSS tag soup parser / serializer (Suzan Foster)<br />
+Fix a crash in the RDF/XML serializers with bad URI predicates.
 </p>
+
+<p>See the <a href="RELEASE.html#rel1_4_7">1.4.7 Release Notes</a>
+for the full details of the changes.</p>
 
 
 <h2>2005-05-19 Version 1.4.6 Released</h2>
